<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_places"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/places" />
    <item
        android:id="@+id/nav_routes"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/routes" />
    <item
        android:id="@+id/nav_favorites"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/favorites" />
    <item
        android:id="@+id/nav_weather"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/weather" />
    <item
        android:id="@+id/nav_help"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/help" />
</menu>
